<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:id="@+id/MainScrollRegistration"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cast_intro_overlay_background_color"
            android:alpha="0.2"
            android:layout_alignParentTop="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/txtfullname"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:drawablePadding="7dp"
            android:drawableStart="@android:drawable/sym_action_chat"
            android:hint="@string/full_name"
            android:textColorHint="#cccccc"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_below="@+id/logo_text"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/txtemail"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:drawablePadding="7dp"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:textColorHint="#cccccc"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_below="@+id/txtfullname"
            android:layout_centerHorizontal="true"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="11dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:textSize="20sp"
            android:textColorHint="#cccccc"
            android:textColor="#FFFFFF"
            android:id="@+id/txtpass"
            android:layout_below="@+id/txtemail"
            android:layout_alignStart="@+id/txtemail"
            android:layout_alignEnd="@+id/txtemail" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="11dp"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:hint="@string/confirm_password"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:textSize="20sp"
            android:textColorHint="#cccccc"
            android:textColor="#FFFFFF"
            android:id="@+id/txtpass_confirm"
            android:layout_below="@+id/txtpass"
            android:layout_alignStart="@+id/txtemail"
            android:layout_alignEnd="@+id/txtemail" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn_drawable"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:id="@+id/btnregister"
            android:layout_below="@+id/txtpass_confirm"
            android:layout_marginTop="6dp"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:layout_alignStart="@+id/txtpass"
            android:layout_alignEnd="@+id/txtpass" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:textSize="70sp"
            android:id="@+id/logo_text"
            android:src="@drawable/logo_text"
            android:layout_marginStart="@dimen/logo_horizontal_margin"
            android:layout_marginEnd="@dimen/logo_horizontal_margin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo_text" />

    </RelativeLayout>
</ScrollView>