<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="25dp"
    android:paddingEnd="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iti.tripplanner.DialogActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/TextDetails" />

    <TextView
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/TextDetails"
        android:id="@+id/CancelButton"
        android:layout_alignParentStart="true" />


    <TextView
        android:text="@string/start"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/StartButton"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/CancelButton"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/later"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/LaterButton"
        android:layout_alignTop="@id/CancelButton"
        android:layout_toStartOf="@id/StartButton" />

</RelativeLayout>
