<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    tools:context=".activities.PasswordResetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:alpha="0.2"
            android:background="@color/cast_intro_overlay_background_color" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_text"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="18dp"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:drawablePadding="7dp"
            android:drawableStart="@android:drawable/sym_action_email"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#cccccc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnResetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtemail"
            android:layout_alignLeft="@+id/txtemail"
            android:layout_alignRight="@+id/txtemail"
            android:layout_alignStart="@+id/txtemail"
            android:layout_below="@+id/txtemail"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_btn_drawable"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/logo_horizontal_margin"
            android:layout_marginStart="@dimen/logo_horizontal_margin"
            android:contentDescription="@string/logo_text"
            android:src="@drawable/logo_text"
            android:textSize="70sp" />

    </RelativeLayout>
</ScrollView>